--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
-    "openai": "^3.3.0"
+    "openai": "^3.2.1"
   }
 }
